# experiments

./: LICENSE  README.md
C/ncurses-shader/: cshader.c
javascript/cryptoPortfolio/: README.md  cryptos.html
python/: InputTypeAnnotations.py
python/procurement_parser/: README.md  duplicate_checker.py  main_processor.py  output_20260319_02.23.21.json  parsed_json_data.json  parser.py  pyproject.toml  xmltojson_cli.py
python/procurement_parser/xml3/: 014743-2025.xml  015169-2025.xml  015461-2025.xml  015541-2025.xml  015627-2025.xml  017674-2025.xml  018251-2025.xml  018264-2025.xml  018310-2025.xml  018662-2025.xml  018722-2025.xml  019058-2025.xml  019161-2025.xml  019329-2025.xml  019450-2025.xml  019729-2025.xml  019791-2025.xml  019799-2025.xml  019825-2025.xml  019852-2025.xml  019926-2025.xml  020085-2025.xml  020215-2025.xml  020270-2025.xml  021087-2025.xml  021130-2025.xml  021141-2025.xml  021587-2025.xml  021694-2025.xml  021733-2025.xml
scala/piratebay-crawler/: TPBCrawler.scala
shellscript/jobsearch/: README.md  jobs.sh
